--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "homepage": "https://github.com/Afrosiyob/learnNode#readme",
     "dependencies": {
         "express": "^4.17.1",
+        "helmet": "^4.6.0",
+        "joi": "^17.4.0",
         "mongoose": "^5.12.14",
         "morgan": "^1.10.0",
         "underscore": "^1.13.1"
