--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node server.js",
-        "server": "nodemon server.js"
+        "start": "node index.js",
+        "server": "nodemon index.js"
     },
     "repository": {
         "type": "git",
@@ -20,11 +20,10 @@
     },
     "homepage": "https://github.com/Afrosiyob/learnNode#readme",
     "dependencies": {
+        "config": "^3.3.6",
         "express": "^4.17.1",
-        "helmet": "^4.6.0",
-        "joi": "^17.4.0",
         "mongoose": "^5.12.14",
         "morgan": "^1.10.0",
-        "underscore": "^1.13.1"
+        "nodemon": "^2.0.7"
     }
 }
