--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     },
     "homepage": "https://github.com/Afrosiyob/learnNode#readme",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "config": "^3.3.6",
         "express": "^4.17.1",
+        "express-validator": "^6.12.0",
+        "joi": "^17.4.0",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.12.14",
         "morgan": "^1.10.0",
         "nodemon": "^2.0.7"
